--- a/tilt-site_tidy/sass/partials/_reusables.scss
+++ b/tilt-site_tidy/sass/partials/_reusables.scss
@@ -23,6 +23,7 @@ $bp-desktop-large: 1024px;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
 }
 
 .text-align{
